--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "lint",
     "test"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "moment": "^2.29.1"
+  },
   "peerDependencies": {
     "vue": "^2.3.0"
   },
